file(RELATIVE_PATH tarDIR "${CMAKE_BINARY_DIR}"
   "${CMAKE_CURRENT_SOURCE_DIR}")
   
add_subdirectory(attachComp)
add_subdirectory(compWeights)
add_subdirectory(construct)
add_subdirectory(constructVar)
add_subdirectory(crystal)
add_subdirectory(endf)
add_subdirectory(flukaPhysics)
add_subdirectory(flukaProcess)
add_subdirectory(flukaTally)
add_subdirectory(funcBase)
add_subdirectory(generalProcess)
add_subdirectory(geometry)
add_subdirectory(input)
add_subdirectory(insertUnit)
add_subdirectory(log)
add_subdirectory(magnetic)
add_subdirectory(mcnpProcess)
add_subdirectory(md5)
add_subdirectory(modelSupport)
add_subdirectory(monte)
add_subdirectory(objectMod)
add_subdirectory(phitsPhysics)
add_subdirectory(phitsProcess)
add_subdirectory(phitsSupport)
add_subdirectory(phitsTally)
add_subdirectory(physics)
add_subdirectory(poly)
add_subdirectory(simMC)
add_subdirectory(source)
add_subdirectory(support)
add_subdirectory(tally)
add_subdirectory(visit)
add_subdirectory(weights)
add_subdirectory(work)
add_subdirectory(world)
add_subdirectory(xml)

set(SRC_LIST ${SRC_LIST}
  ${tarDIR}/CMakeLists.txt PARENT_SCOPE)	

